# k-means

./: CMakeLists.txt  install.sh
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
bulid/src/: Makefile  cmake_install.cmake  k_means_test
src/: CMakeLists.txt  k-means.h
